Developer/src/objects/Translate__c.object
<CustomObject>
    <fields>
        <fullName>CreateDate__c</fullName>
        <label>作成日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnglishTitle__c</fullName>
        <label>EnglishTitle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English__c</fullName>
        <label>English</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JapaneseTite__c</fullName>
        <label>JapaneseTite</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Japanese__c</fullName>
        <label>Japanese</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Translate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Translate名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>